--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "MySql": "Server=localhost;Database=inmobiliaria;User=root;Password=;"
+  },
+  "Salt": "SALADA"
+  
 }
